<resources>
    <string name="app_name">FakeGPS</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>

    <string name="search">Search your new location</string>
    <string name="locate">Locate</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="go">Go</string>
    <string name="go_to">Go To</string>
    <string name="change_language">Change language</string>

    <string name="persian">Persian</string>
    <!--<string name="english">"فارسی"</string>-->
    <string name="english">English</string>

    <string name="start">Start</string>
    <string name="stop">Stop</string>

    <string name="no_mock">No mock location set</string>
    <string name="no_loc">No location set</string>
    <string name="no_fav">No favourites added</string>
    <string name="current_location">Current Location</string>

    <string name="map_type">Map Type</string>
    <string name="satellite">Satellite</string>
    <string name="hybrid">Hybrid</string>
    <string name="normal">Normal</string>
    <string name="terrain">Terrain</string>
    <string name="none">None</string>
    <string name="set_type">Set Type</string>

    <string name="toast_item_removed_from_fav">Item removed from favourites</string>
    <string name="toast_enter_lat_lon">Please enter latitude and longitude</string>

    <string name="locating">Locating...</string>

    <string name="share_txt">Share</string>

    <string name="check_internet">Can\'t get location details</string>
    <string name="marker_title">Marker Title</string>
    <string name="marker_description">Marker Description</string>

    <string name="new_mock">New mock location</string>
    <string name="loc_set">Location set successfully</string>

    <string name="added_to_fav">Place added to favourites</string>
    <string name="check_internet2">Can\'t get location details</string>

    <string name="check_new_loc">Hey check out my new location</string>
    <string name="no_loc_provider">No location provider found!</string>

    <string name="denied_per">Oops you just denied the permission</string>
    <string name="cancel">Cancel</string>
    <string name="gps_settings">GPS settings</string>
    <string name="enable_gps">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="settings">Settings</string>

    <string name="set_mock">Set mock location</string>
    <string name="history">History</string>
    <string name="fav">Favourites</string>

    <string name="once_again">Press once again to exit</string>
    <string name="change_map_type">Change map type</string>
    <string name="about_us">About us</string>
    <string name="faq">FAQs</string>
    <string name="inst">Instructions</string>
    <string name="close">Close</string>

    <string name="set_this_loc">Set as my location</string>

    <string name="map_inst">Click on map or type in search bar to see and later set any location</string>
    <string name="def_loc_inst">Whenever you are stuck in maps, click on my location icon to go to default</string>
    <string name="inst_allow_per">Allow all permissions to the app</string>
    <string name="allow_mock">Allow set mock location from developer options</string>
    <string name="navigate_map">Navigate on map</string>
    <string name="set_loc">Press play button to set mock location</string>
    <string name="search_place">Search your place from search bar</string>
    <string name="navigate_his">Navigate to history option to see your previous set places</string>
    <string name="navigate_fav">Navigate to favourite option to see your favourite places</string>
    <string name="set_fav">Press star button to add current location in favourites</string>
    <string name="share">Press share button to share your current location</string>
    <string name="go_to_op">Navigate to Go To option to set location to any latitude and longitude</string>
    <string name="change_map">Navigate to Change map type option to change type of map shown</string>

    <string name="title_activity_splash">Splash</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


</resources>
