<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimary"
        android:text="@string/fav"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="22sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="10dp"
        android:background="#ccc"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="gone"
        android:id="@+id/no_mock"
        android:layout_marginTop="100dp"
        android:text="@string/no_mock"
        android:layout_gravity="center"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="250dp">
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:id="@+id/recycler"
        android:layout_height="wrap_content" />
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="#ccc"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:id="@+id/close"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:layout_marginBottom="10dp"
        android:textStyle="bold|italic"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_gravity="right"
        android:text="@string/close"/>

</LinearLayout>